DEMO commit